# spectral-prior

./: .gitignore  README.md  environment.yaml  requirements.txt  setup.py  train.py
TFM-Playground/: .gitignore  LICENSE  README.md  pretrain_classification.py  pretrain_regression.py  prior_visualization.ipynb  pyproject.toml
TFM-Playground/tfmplayground/: __init__.py  callbacks.py  evaluation.py  interface.py  model.py  train.py  utils.py
TFM-Playground/tfmplayground/priors/: __init__.py  __main__.py  config.py  dataloader.py  main.py  utils.py
TabICL/: pyproject.toml
TabICL/tests/: test_sklearn.py
notebooks/: reproduce_results.ipynb
results/: benchmark_results.txt  demo_deep_spectral.csv  demo_spectral_student_t.csv  expanded_benchmark_results.txt  extended_comparison.txt  report.md  tabarena_results.txt  tuning_results.txt  wild_tricks_all_h.txt  wild_tricks_v2.txt
scripts/: ablation_study.py  advanced_priors.py  analysis_utils.py  benchmark_10class.py  compute_ground_truth.py  demo_data_generation.py  evaluate_multi_h.py  expanded_benchmark.py  extended_comparison.py  final_benchmark.py  h_calibration_experiment.py  measure_entropy.py  overnight_experiments.py  plot_spectral_match.py  quick_wins.py  stress_test.py  submit_to_nicl.py  tabarena_benchmark.py  tabarena_deep_benchmark.py  train_10class.py  train_baseline.py  train_baseline_gaussian.py  train_multi_h.py  train_spectral.py  train_tournament.py  tune_inference.py  tune_prior.py  wild_tricks.py  wild_tricks_all_h.py  wild_tricks_v2.py
src/spectral_prior/: __init__.py  (+2 more)
tests/: test_generation.py
(+46 files in other folders)
