[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "tfmplayground"
version = "0.0.1"
authors = [
    { name = "Alexander Pfefferle", email = "pfeffera@cs.uni-freiburg.de" },
]
description = "A Playground for Tabular Foundation Models"
readme = "README.md"
requires-python = "==3.12.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
dependencies = [
    "torch==2.9",
    "numpy>=2.0.2",
    "h5py>=3",
    "requests>=2",
    "scikit-learn>=1.5",
    "schedulefree>=1.4",
    "pfns==0.3.0",
    "openml==0.15.1",
    "tabicl",
    "ticl @ git+https://github.com/microsoft/ticl.git@main",
    "tabpfn-v1-prior @ git+https://github.com/automl/tabpfn-v1-prior.git",
    "interpret",
    "numba",
    "mlflow"
]

[project.optional-dependencies]
wandb = ["wandb>=0.20"]
tensorboard = ["tensorboard>=2.19"]
[project.urls]
Homepage = "https://github.com/automl/TFM-Playground"
Issues = "https://github.com/automl/TFM-Playground/issues"

[tool.setuptools]
packages = { find = { include = ["tfmplayground"] } }
